@@ -1,3 +1,10 @@
+2005-05-23  Tor Lillqvist  <tml@novell.com>
+
+	* gdk/win32/gdkkeys-win32.c (handle_dead): If the keysym isn't one
+	of the special cases this function takes care of, us it as
+	such. This takes care of for instance the Bengali Virama, see bug
+	#165723.
+
 2005-05-20  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkimcontextsimple.c (check_table): Avoid a possible
